create box to choose character

--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <input type="file">
-    <canvas id="canvas"></canvas>
+    <canvas id="cv1"></canvas>
     <div id="progress">
     </div>
 
