--- a/app.html
+++ b/app.html
@@ -4,15 +4,24 @@
     <title>OCR</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <input type="file">
-    <canvas id="cv1"></canvas>
-    <div id="progress">
+    <div class="content">
+      <input type="file">
+      <div class="file-container">
+        <canvas id="cv1" class="img-canvas"></canvas>
+        <canvas id="cv2" class="img-canvas"></canvas>
+        <!-- <button class="btn-scan" onclick="scanImg(dataURI);" id="snip"> Scan </button> -->
+      </div>
+      <div id="progress"></div>
+      <textarea id="textarea"></textarea>
     </div>
-
-    <textarea id="textarea"></textarea>
+    
     <script src="./node_modules/tesseract.js/dist/tesseract.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="./functions.js"></script>
+    <!-- <script src="_bundle.js"></script> -->
+    
   </body>
 </html>
