add browserify for module

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="styles.css">
+    <script src="https://www.marvinj.org/releases/marvinj-1.0.js"></script>
   </head>
   <body>
     <div class="content">
@@ -19,9 +20,9 @@
       <textarea id="textarea"></textarea>
     </div>
     
-    <script src="./node_modules/tesseract.js/dist/tesseract.min.js"></script>
-    <script src="./functions.js"></script>
-    <!-- <script src="_bundle.js"></script> -->
+    <script src="../node_modules/tesseract.js/dist/tesseract.min.js"></script>
+    <script src="../src/functions.js"></script>
+    <!-- <script src="../dist/bundle.js"></script> -->
     
   </body>
 </html>
