--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="content">
-      <input type="file">
+      <input type="file"  id="upload">
       <div class="file-container">
         <canvas id="cv1" class="img-canvas"></canvas>
         <canvas id="cv2" class="img-canvas"></canvas>
@@ -22,6 +22,7 @@
     
     <script src="../node_modules/tesseract.js/dist/tesseract.min.js"></script>
     <script src="../src/functions.js"></script>
+    <!-- <script src="../src/app.js"></script> -->
     <!-- <script src="../dist/bundle.js"></script> -->
     
   </body>
